--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,6 +35,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 
+vars:
+  banner_id: 65ddd78688028afca5ba3675
+  campaign_id: 65e6e9189b79ad13bfb63cc1
+  action_id: 28
+
 models:
   user_deals:
     +materialized: view
