--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'dbt_octafx'
 version: '1.0.0'
 config-version: 2
 
@@ -43,5 +43,6 @@ vars:
   action_id: 28
 
 models:
-  user_deals:
-    +materialized: view
+  dbt_octafx:
+    user_deals:
+      +materialized: view
