added percentile calculation to ab_stats model

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,9 +37,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 vars:
   campaign_id: 65e6e9189b79ad13bfb63cc1
-  start: 2024-01-01
-  end: 2024-01-07
-  action_id: 28
+  start: '2024-02-05'
+  end: '2024-02-12'
+  action_id: 8
   symbol_name: NAS100
 
 models:
