--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -41,7 +41,7 @@ vars:
   end: '2024-02-12'
   action_id: 8
   symbol_name: NAS100
-  random_users: true
+  random_users: false
 
 models:
   dbt_octafx:
