--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,10 +37,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 vars:
   campaign_id: 65e6e9189b79ad13bfb63cc1
-  start: 2024-02-05
-  end: 2024-02-12
-  action_id: 8
-  symbol_name: ETHUSD
+  start: 2024-03-11
+  end: 2024-03-17
+  action_id: 28
+  symbol_name: XNGUSD
   random_users: true
 
 models:
