--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -22,6 +22,7 @@ snapshot-paths: ["snapshots"]
 target-path: "target"  # directory which will store compiled SQL files
 clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
+  - "target"
 
 
 # Configuring models
@@ -46,3 +47,5 @@ models:
   dbt_octafx:
     user_deals:
       +materialized: view
+      ab_stats:
+        +materialized: table
