--- a/models/metrics/semantic_models.yml
+++ b/models/metrics/semantic_models.yml
@@ -30,7 +30,7 @@ metrics:
     label: deals by symbol per user
     type_params:
       measure: deals_cnt
-  - name: sum_symbol_bol_by_user
+  - name: sum_symbol_vol_by_user
     type: simple
     label: sum volume by symbol per user
     type_params:
