--- a/packages.yml
+++ b/packages.yml
@@ -5,3 +5,46 @@ packages:
     version: 1.1.1
   - package: mjirv/dbt_product_analytics
     version: [">=0.1.0"]
+  - package: calogica/dbt_expectations
+    version: 0.10.3
+  - package: data-mie/dbt_profiler
+    version: 0.8.1
+  - package: Datomni/profitwell_metrics
+    version: 0.1.1
+
+  - package: dbt-labs/dbt_project_evaluator
+    version: 0.10.0
+  - package: Divergent-Insights/dbt_dataquality
+    version: 0.3.5
+  - package: elementary-data/elementary
+    version: 0.14.1
+  - package: fal-ai/feature_store
+    version: 0.1.2
+  - package: fivetran/amplitude
+    version: 0.4.0
+  - package: Fleetio/dbt_segment
+    version: 0.3.1
+  - package: fullstorydev/dbt_fullstory
+    version: 0.7.0
+  - package: infinitelambda/dq_tools
+    version: 1.5.0
+  - package: infinitelambda/dq_vault
+    version: 0.1.1
+  - package: jpmmcneill/dbt_graph_theory
+    version: 0.1.0
+  - package: kgmcquate/testgen
+    version: 1.0.3
+  - package: mjirv/dbt_datamocktool
+    version: 0.3.5
+  - package: "omnata-labs/dbt_ml_preprocessing"
+    version: [">=1.0.2"]
+  - package: ScalefreeCOM/datavault4dbt
+    version: 1.3.1
+  - package: snowplow/snowplow_ecommerce
+    version: 0.8.2
+  - package: snowplow/snowplow_normalize
+    version: 0.3.5
+  - package: tnightengale/dbt_activity_schema
+    version: 0.4.1
+  - package: yu-iskw/dbt_ops
+    version: 0.2.0
