--- a/profiles.yml
+++ b/profiles.yml
@@ -1,14 +1,12 @@
 default:
+  target: dev
+
   outputs:
     dev:
-      dataset: dev_gsokolov
-      job_execution_timeout_seconds: 399
-      job_retries: 1
-      location: EU
-      method: service-account
-      keyfile: service_account_key.json
-      priority: interactive
-      project: analytics-147612
-      threads: 4
       type: bigquery
-  target: dev
+      method: service-account
+      project: analytics-147612
+      schema: dev_gsokolov
+      threads: 4
+      keyfile: service_account_key.json
+      timeout_seconds: 300
