--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,6 +1,6 @@
 name: dbt_octafx
 
-version: '0.1.0'
+version: "0.1.0"
 
 require-dbt-version: ">=0.17.2"
 
@@ -8,7 +8,6 @@ profile: "default"
 
 target-path: "target"
 clean-targets:
-  - "dbt_packages"
   - "target"
 
 vars:
@@ -18,8 +17,11 @@ vars:
   action_id: 437
   symbol_name: XAUUSD
   random_users: false
+  dbt_dq_tool_schema: AUDIT
+
+on-run-end:
+  - "{{ dq_tools.store_test_results(results) }}"
 
 models:
   dbt_octafx:
     +materialized: view
-
