--- a/models/push_problem/stage/stg_users.yml
+++ b/models/push_problem/stage/stg_users.yml
@@ -12,13 +12,16 @@ models:
         meta:
           dimension:
             type: number
+        data_type: INT64
       - name: country_code
         description: ""
         meta:
           dimension:
             type: string
+        data_type: STRING
       - name: registered_dt
         description: ""
         meta:
           dimension:
             type: timestamp
+        data_type: TIMESTAMP
