--- a/models/ab_stats/ab_users.yml
+++ b/models/ab_stats/ab_users.yml
@@ -1,17 +1,16 @@
 version: 2
 models:
-  - name: tokens
-    description: ""
+  - name: ab_users
     columns:
       - name: user_id
-        data_type: STRING
         description: ""
+        data_type: INT64
         meta:
           dimension:
-            type: string
-      - name: google_push_notification_id
-        data_type: STRING
+            type: number
+      - name: variant
         description: ""
+        data_type: STRING
         meta:
           dimension:
             type: string
