--- a/models/push_problem/corrupt_user_id.yml
+++ b/models/push_problem/corrupt_user_id.yml
@@ -1,14 +1,17 @@
 version: 2
-
 models:
   - name: corrupt_user_id
     description: ""
     columns:
       - name: failed_pushes_users__appsflyer_id
-        data_type: string
+        data_type: STRING
         description: ""
-
+        meta:
+          dimension:
+            type: string
       - name: failed_pushes_users__user_id
-        data_type: numeric
+        data_type: NUMERIC
         description: ""
-
+        meta:
+          dimension:
+            type: number
