--- a/models/push_problem/timedelta_per_user.yml
+++ b/models/push_problem/timedelta_per_user.yml
@@ -1,29 +1,28 @@
 version: 2
 models:
-  - name: users_cids_all
-    description: ""
+  - name: timedelta_per_user
     columns:
-      - name: client_id
-        data_type: STRING
+      - name: appsflyer_id
         description: ""
+        data_type: STRING
         meta:
           dimension:
             type: string
-      - name: user_id
-        data_type: INT64
+      - name: failed_timestamp
         description: ""
-        meta:
-          dimension:
-            type: number
-      - name: dt
         data_type: TIMESTAMP
-        description: ""
         meta:
           dimension:
             type: timestamp
-      - name: src_info
-        data_type: STRING
+      - name: first_attempt_timestamp
         description: ""
+        data_type: TIMESTAMP
         meta:
           dimension:
-            type: string
+            type: timestamp
+      - name: time_delta_seconds
+        description: ""
+        data_type: INT64
+        meta:
+          dimension:
+            type: number
