--- a/models/metrics/pushes_semantic.yml
+++ b/models/metrics/pushes_semantic.yml
@@ -4,16 +4,16 @@ semantic_models:
     model: ref('int_pushes')
     description: "A semantic model representing bloomreach events data"
     defaults:
-      agg_time_dimension: date(timestamp)
+      agg_time_dimension: timestamp
     entities:
       - name: user_id
         type: primary
     measures:
-      - name: puch_cnt
+      - name: push_cnt
         expr: 1
         agg: count
     dimensions:
-      - name: date(timestamp)
+      - name: timestamp
         type: time
         type_params:
           time_granularity: day
