--- a/models/metrics/pushes_metrics.yml
+++ b/models/metrics/pushes_metrics.yml
@@ -4,12 +4,12 @@ metrics:
     description: Trailing 1-month cumulative order amount
     type: cumulative
     type_params:
-      measure: pushes_cnt
+      measure: push_cnt
       window: 1 week
   - name: cumulative_pushes_total_mtd #For this metric, we use a monthly grain-to-date
     label: Cumulative pushes total (MTD)
     description: The month-to-date value of all orders
     type: cumulative
     type_params:
-      measure: pushes_cnt
+      measure: push_cnt
       grain_to_date: week
